--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,37 +77,98 @@ nav li a {
     width: 100%;
 }
 
+main {
+
+    max-width: 1340px;
+    margin: 70px auto;
+}
+
+/* 
+Teams section */
+
+.teams-container {
+    display: flex;
+    align-items: center;
+
+}
+
+.teams-img-container {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.teams-content {
+
+    padding-left: 80px;
+
+}
+
+.teams-title {
+
+    color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.quick-list {
+
+    font-size: 45px;
+    font-weight: 500;
+}
+
+.quick-list-feature {
+
+    color: #FF900E;
+}
+
+
+
+
 /* Responsive media queries */
 /* For mobile devices */
 
 @media screen and (max-width: 576px) {
 
+    .banner-title {
+        font-size: 3rem;
 
-    header{
+    }
+
+    header {
 
         padding: 20px;
     }
 
-    nav{
+    nav,
+    .teams-container {
 
         flex-direction: column;
     }
-   
+
+    .teams-img-container {
+
+        grid-template-columns: repeat(1, 1fr);
+
+
+    }
 }
 
 /* tablet or medium devices */
 
-@media screen and (min-width: 576px) and (max-width: 992px) {
+@media screen and (min-width: 576px) and (max-width: 960px) {
 
-    nav{
+    nav,
+    .teams-container {
 
         flex-direction: column;
     }
 
-    header{
+    header {
 
         padding: 20px;
     }
 
-    
+
 }
